Versão para revisão 3.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,98 @@
+@article{diffie1976new,
+  title={New directions in cryptography},
+  author={Diffie, Whitfield and Hellman, Martin},
+  journal={IEEE transactions on Information Theory},
+  volume={22},
+  number={6},
+  pages={644--654},
+  year={1976},
+  publisher={IEEE}
+}
+
+@article{diffie1998,
+  author={Diffie, Whitfield},
+  journal={Proceedings of the IEEE}, 
+  title={The first ten years of public-key cryptography}, 
+  year={1988},
+  volume={76},
+  number={5},
+  pages={560-577},
+  doi={10.1109/5.4442}}
+
+@book{stallings2014,
+author = {Stallings, William},
+title = {Criptografia e Segurança de redes},
+year = {2014},
+edition = {6th},
+publisher = {Pearson Prentice Hall},
+}
+
+@book{Sommerville2007,
+author = {Nakov, Svetlin},
+title = {Practical Cryptography for Developers},
+year = {?},
+isbn = {978-619-00-0870-5},
+publisher = {Svetlin Nakov},
+url = "https://cryptobook.nakov.com/",
+}
+
+@ARTICLE{aki1983,
+  author={ {Aki}},
+  journal={Computer}, 
+  title={Digital signatures: A tutorial survey}, 
+  year={1983},
+  volume={16},
+  number={2},
+  pages={15-24},
+  doi={10.1109/MC.1983.1654294}
+ }
+
+@misc{iti2018, 
+    title={Novo marco da ICP-Brasil: emitidas Cadeias V6 e V7 em curvas elípticas}, 
+    url={https://www.gov.br/iti/pt-br/assuntos/noticias/indice-de-noticias/novo-marco-da-icp-brasil-emitidas-cadeias-v6-e-v7-em-curvas-elipticas}, 
+    journal={Instituto Nacional de Tecnologia da Informação}, 
+    publisher={ Instituto Nacional de Tecnologia da Informação}, year={2018}, 
+    month={Dec}
+}
+
+% Verificar
+@misc{nakov2018, 
+    title={Digital Signatures}, url={https://cryptobook.nakov.com/digital-signatures}, journal={Practical Cryptography for Developers}, publisher={Svetlin Nakov}, author={Nakov, Svetlin}, year={2018}, month={Nov}
+} 
+
+@article{johnson2001elliptic,
+  title={The elliptic curve digital signature algorithm (ECDSA)},
+  author={Johnson, Don and Menezes, Alfred and Vanstone, Scott},
+  journal={International journal of information security},
+  volume={1},
+  number={1},
+  pages={36--63},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{bernstein2012high,
+  title={High-speed high-security signatures},
+  author={Bernstein, Daniel J and Duif, Niels and Lange, Tanja and Schwabe, Peter and Yang, Bo-Yin},
+  journal={Journal of cryptographic engineering},
+  volume={2},
+  number={2},
+  pages={77--89},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{bernstein2015eddsa,
+  title={EdDSA for more curves},
+  author={Bernstein, Daniel J and Josefsson, Simon and Lange, Tanja and Schwabe, Peter and Yang, Bo-Yin},
+  journal={Cryptology ePrint Archive},
+  volume={2015},
+  year={2015},
+  publisher={IACR}
+}
+
+%--------
+
 @manual{inmetro2003,
 	Author = {INMETRO},
 	Title = {Vocabulário internacional de termos fundamentais e gerais de
