--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -1,9 +1,28 @@
-\chapter*[Introdução]{Introdução}
-\addcontentsline{toc}{chapter}{Introdução}
+\chapter[Introdução]{Introdução}
+% \addcontentsline{toc}{chapter}{Introdução}
 
-Este documento apresenta considerações gerais e preliminares relacionadas 
-à redação de relatórios de Projeto de Graduação da Faculdade UnB Gama 
-(FGA). São abordados os diferentes aspectos sobre a estrutura do trabalho, 
-uso de programas de auxilio a edição, tiragem de cópias, encadernação, etc.
+% Este documento apresenta considerações gerais e preliminares relacionadas 
+% à redação de relatórios de Projeto de Graduação da Faculdade UnB Gama 
+% (FGA). São abordados os diferentes aspectos sobre a estrutura do trabalho, 
+% uso de programas de auxilio a edição, tiragem de cópias, encadernação, etc.
 
-Este template é uma adaptação do ABNTeX2\footnote{\url{https://github.com/abntex/abntex2/}}.
+% Este template é uma adaptação do ABNTeX2\footnote{\url{https://github.com/abntex/abntex2/}}.
+
+\chapter[Justificativa]{Justificativa}
+
+A assinatura digital é o desenvolvimento mais importante a partir dos trabalhos sobre criptografia de chave pública, sendo utilizada como garantia de proteção em transações eletrônicas e dentre outros serviços na Web. A assinatura digital trouxe uma série de benefícios, como a criação de Certificados Digitais, assegurando e facilitando a identificação de pessoas físicas, jurídicas, ou até mesmo de máquinas na internet. 
+
+No âmbito das assinaturas digitais, o Algoritmo de Assinatura Digital da Curva de Edwards (EdDSA) tem se tornado cada vez mais utilizado, uma vez que tem se demonstrado mais simples, mais seguro e mais rápido do que outros algoritmos, como o Algoritmo de Assinatura Digital de Curvas Elípticas (ECDSA), além de depender da dificuldade de se calcular logaritmos discretos em curvas elípticas. 
+
+Desta forma a ICP-Brasil busca a implementação de algoritmos e suítes de assinatura digitais, com a finalidade de desburocratizar e agilizar, com a segurança técnica e jurídica necessária, todos os procedimentos e segmentos da sociedade brasileira, diminuindo os custos e fraudes, tornando a vida do cidadão melhor \cite{iti2018}.
+
+Este trabalho tem como proposta implementar os algoritmos de assinatura definidos pelo ICP-Brasil na linguagem de programação Dart. Essa linguagem foi recentemente desenvolvida pela Google e vem tomando bastante espaço no mundo da tecnologia por conta da tecnologia Flutter. 
+
+\chapter[Problema de Pesquisa]{Problema de Pesquisa}
+
+\chapter[Objetivos]{Objetivos}
+
+\section{Objetivo Geral}
+
+\section{Objetivos Específicos}
+
