--- a/editaveis/abreviaturas.tex
+++ b/editaveis/abreviaturas.tex
@@ -1,6 +1,7 @@
 \begin{siglas}
-  \item[Fig.] Area of the $i^{th}$ component
-  \item[456] Isto é um número
-  \item[123] Isto é outro número
-  \item[lauro cesar] este é o meu nome
+%   \item[Fig.] Area of the $i^{th}$ component
+  \item[DSA] \textit{Digital Signature Algorithm}
+  \item[ECDSA] \textit{Elliptic Curve Digital Signature Algorithm}
+  \item[EdDSA] \textit{Edwards-curve Digital Signature Algorithm}
+  \item[RSA] Rivest–Shamir–Adleman
 \end{siglas}
