--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -1,15 +1,15 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Lucas Penido Antunes}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
-\data{2013}
+\titulo{Implementação de módulo para geração e verificação de assinaturas digitais EdDSA}
+\data{2021}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
 
 % Dados da orientacao
-\orientador{Titulação Acadêmica e Nome do Orientador}
+\orientador{Prof. Dr. Tiago Alves da Fonseca}
 \coorientador{quando houver, Titulação Acadêmica e Nome do Orientador}
 
 % Dados para a ficha catalográfica
