--- a/tcc.tex
+++ b/tcc.tex
@@ -1,6 +1,7 @@
 \input{fixos/pacotes}
 \input{fixos/comandos}
 \usepackage{fixos/customizacoes}
+\usepackage{amssymb}
 
 \input{editaveis/informacoes}
 \input{fixos/informacoes}
@@ -13,26 +14,27 @@
 \imprimirfolhaderosto*
 
 \input{fixos/fichaCatalografica}
-\input{editaveis/errata}
+% \input{editaveis/errata}
 \input{fixos/folhaDeAprovacao}
-\input{editaveis/dedicatoria}
+% \input{editaveis/dedicatoria}
 \input{editaveis/agradecimentos}
-\input{editaveis/epigrafe}
-\input{editaveis/resumo}
-\input{editaveis/abstract}
+% \input{editaveis/epigrafe}
+% \input{editaveis/resumo}
+% \input{editaveis/abstract}
 \input{fixos/listasAutomaticas}
 \input{editaveis/abreviaturas}
-\input{editaveis/simbolos}
+% \input{editaveis/simbolos}
 \input{fixos/indiceAutomatico}
 
 \textual
 
 \input{editaveis/introducao}
-\input{editaveis/aspectosgerais}
-\input{editaveis/consideracoes}
-\input{editaveis/textoepostexto}
-\input{editaveis/elementosdotexto}
-\input{editaveis/elementosdopostexto}
+\input{editaveis/fundamentacao teorica}
+% \input{editaveis/aspectosgerais}
+% \input{editaveis/consideracoes}
+% \input{editaveis/textoepostexto}
+% \input{editaveis/elementosdotexto}
+% \input{editaveis/elementosdopostexto}
 
 \bookmarksetup{startatroot} 
 
