--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -48,11 +48,12 @@ url = "https://cryptobook.nakov.com/",
  }
 
 @misc{iti2018, 
+    author = {{Instituto Nacional de Tecnologia da Informação}},
     title={Novo marco da ICP-Brasil: emitidas Cadeias V6 e V7 em curvas elípticas}, 
     url={https://www.gov.br/iti/pt-br/assuntos/noticias/indice-de-noticias/novo-marco-da-icp-brasil-emitidas-cadeias-v6-e-v7-em-curvas-elipticas}, 
-    journal={Instituto Nacional de Tecnologia da Informação}, 
-    publisher={ Instituto Nacional de Tecnologia da Informação}, year={2018}, 
-    month={Dec}
+    year={2018}, 
+    month={Dec},
+    urlaccessdate ={22/03/2021}
 }
 
 % Verificar
@@ -89,6 +90,33 @@ url = "https://cryptobook.nakov.com/",
   volume={2015},
   year={2015},
   publisher={IACR}
+}
+
+ @misc{ps32010, 
+  title={PS3 epic fail}, 
+  publisher={failoverflow}, 
+  author={"Bushing" and Cantero, Hector and Boessenkool, Segher and Peter, Sven}, 
+  url={https://fahrplan.events.ccc.de/congress/2010/Fahrplan/attachments/1780_27c3_console_hacking_2010.pdf},
+  year={2010}
+} 
+
+@ARTICLE{ElGamalCrypto,
+  author={ElGamal, Taher},
+  journal={IEEE Transactions on Information Theory}, 
+  title={A public key cryptosystem and a signature scheme based on discrete logarithms}, 
+  year={1985},
+  volume={31},
+  number={4},
+  pages={469-472},
+  doi={10.1109/TIT.1985.1057074}}
+  
+@misc{ICPBrasi30,
+author = {{Instituto Nacional de Tecnologia da Informação}},
+title = {ICP-Brasil},
+url = {https://www.gov.br/iti/pt-br/acesso-a-informacao/perguntas-frequentes/icp-brasil},
+month = {7},
+year = {2020},
+urlaccessdate = {21/04/2021}
 }
 
 %--------
