--- a/editaveis/abreviaturas.tex
+++ b/editaveis/abreviaturas.tex
@@ -4,4 +4,6 @@
   \item[ECDSA] \textit{Elliptic Curve Digital Signature Algorithm}
   \item[EdDSA] \textit{Edwards-curve Digital Signature Algorithm}
   \item[RSA] Rivest–Shamir–Adleman
+  \item[AC-Raiz] Autoridade Certificadora Raiz
+  \item[AC] Autoridade Certificadora
 \end{siglas}
