--- a/tcc.tex
+++ b/tcc.tex
@@ -29,7 +29,9 @@
 \textual
 
 \input{editaveis/introducao}
-\input{editaveis/fundamentacao teorica}
+\input{editaveis/FT Sistemas Crip Chave Pública}
+\input{editaveis/FT ICP-Brasil}
+\input{editaveis/FT Dart}
 % \input{editaveis/aspectosgerais}
 % \input{editaveis/consideracoes}
 % \input{editaveis/textoepostexto}
@@ -41,8 +43,8 @@
 \postextual
 
 \bibliography{bibliografia} 
-\input{editaveis/apendices}
-\input{editaveis/anexos}
+% \input{editaveis/apendices}
+% \input{editaveis/anexos}
 \printindex
 
 \end{document}
