--- a/editaveis/FT Sistemas Crip Chave Pública.tex
+++ b/editaveis/FT Sistemas Crip Chave Pública.tex
@@ -1,7 +1,7 @@
 \chapter[Fundamentação Teórica]{Fundamentação Teórica}
 \section{Sistemas Criptográficos de Chave Pública}
 
-A proposta de chave pública foi criada a partir de dois problemas centrais. O primeiro seria o problema de distribuição de chaves, onde duas pessoas só teriam uma comunicação segura caso elas já compartilhassem uma chave anteriormente distribuída entre si. O segundo problema, que aparentemente não havia relação com o primeiro, era o problema de assinaturas digitais. Com a popularização das transações de mensagens e documentos via \textit{Internet}, viu-se a necessidade da criação de uma assinatura que fosse análoga às assinaturas convencionais. Desta maneira seria possível comprovar a outras pessoas que uma mensagem digital partiu de uma pessoa em particular. Para \citeonline[p.~560]{diffie1998} existiam duas questões sobre esses dois problemas:
+A proposta de chave pública foi criada a partir de dois problemas centrais. O primeiro seria o problema de distribuição de chaves, onde duas pessoas só teriam uma comunicação segura caso elas já compartilhassem uma chave anteriormente distribuída entre si. O segundo problema, que aparentemente não havia relação com o primeiro, era o problema de assinaturas digitais. Com a popularização das transações de mensagens e documentos via \textit{Internet}, viu-se a necessidade da criação de uma assinatura que fosse análoga às assinaturas convencionais. Desta maneira seria possível comprovar a outras pessoas que uma mensagem digital partiu de uma pessoa em particular. Para \citeonline[p.~560]{diffie1998} existiam duas questões sobre os problemas mencionados:
 
 \begin{citacao}
 No primeiro caso, se duas pessoas pudessem de alguma forma comunicar uma chave secreta de uma para a outra sem nunca terem se conhecido, por que não poderiam comunicar sua mensagem em segredo? O segundo não é melhor. Para ser eficaz, a assinatura deve ser impressa. Como então pode uma mensagem digital, que pode ser copiada perfeitamente, ter uma assinatura?
