--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -10,12 +10,12 @@
 
 % Dados da orientacao
 \orientador{Prof. Dr. Tiago Alves da Fonseca}
-\coorientador{quando houver, Titulação Acadêmica e Nome do Orientador}
+% \coorientador{quando houver, Titulação Acadêmica e Nome do Orientador}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
 \dataDaAprovacao{01 de junho de 2013 -- Data da aprovação do trabalho}
-\membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
-\membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
+\membroConvidadoUm{Dr. José Antônio Carrijo Barbosa}
+\membroConvidadoDois{Prof. Dr. Edson Alves da Costa Junior}
