--- a/fixos/pacotes.tex
+++ b/fixos/pacotes.tex
@@ -13,3 +13,7 @@
 \usepackage[alf]{abntex2cite}
 \usepackage{bold-extra}
 \usepackage{eso-pic}
+\usepackage{amssymb}
+\usepackage{hyperref}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{float}
