--- a/tcc.tex
+++ b/tcc.tex
@@ -1,7 +1,6 @@
 \input{fixos/pacotes}
 \input{fixos/comandos}
 \usepackage{fixos/customizacoes}
-\usepackage{amssymb}
 
 \input{editaveis/informacoes}
 \input{fixos/informacoes}
@@ -32,6 +31,8 @@
 \input{editaveis/FT Sistemas Crip Chave Pública}
 \input{editaveis/FT ICP-Brasil}
 \input{editaveis/FT Dart}
+\input{editaveis/metodologia}
+\input{editaveis/considerações finais}
 % \input{editaveis/aspectosgerais}
 % \input{editaveis/consideracoes}
 % \input{editaveis/textoepostexto}
