Updates from Overleaf

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -27,15 +27,6 @@ edition = {6th},
 publisher = {Pearson Prentice Hall},
 }
 
-@book{Sommerville2007,
-author = {Nakov, Svetlin},
-title = {Practical Cryptography for Developers},
-year = {?},
-isbn = {978-619-00-0870-5},
-publisher = {Svetlin Nakov},
-url = "https://cryptobook.nakov.com/",
-}
-
 @ARTICLE{aki1983,
   author={ {Aki}},
   journal={Computer}, 
@@ -48,7 +39,7 @@ url = "https://cryptobook.nakov.com/",
  }
 
 @misc{iti2018, 
-    author = {{Instituto Nacional de Tecnologia da Informação}},
+    author = {{INSTITUTO NACIONAL DE TECNOLOGIA DA INFORMAÇÃO}},
     title={Novo marco da ICP-Brasil: emitidas Cadeias V6 e V7 em curvas elípticas}, 
     url={https://www.gov.br/iti/pt-br/assuntos/noticias/indice-de-noticias/novo-marco-da-icp-brasil-emitidas-cadeias-v6-e-v7-em-curvas-elipticas}, 
     year={2018}, 
@@ -58,7 +49,8 @@ url = "https://cryptobook.nakov.com/",
 
 % Verificar
 @misc{nakov2018, 
-    title={Digital Signatures}, url={https://cryptobook.nakov.com/digital-signatures}, journal={Practical Cryptography for Developers}, publisher={Svetlin Nakov}, author={Nakov, Svetlin}, year={2018}, month={Nov}
+    title={Practical Cryptography for Developers}, url={https://cryptobook.nakov.com/}, journal={Practical Cryptography for Developers}, publisher={Svetlin Nakov}, author={Nakov, Svetlin}, year={2018}, month={Nov},
+    note={E-Book}
 } 
 
 @article{johnson2001elliptic,
@@ -95,7 +87,7 @@ url = "https://cryptobook.nakov.com/",
  @misc{ps32010, 
   title={PS3 epic fail}, 
   publisher={failoverflow}, 
-  author={"Bushing" and Cantero, Hector and Boessenkool, Segher and Peter, Sven}, 
+  author={``Bushing'' and Cantero, Hector and Boessenkool, Segher and Peter, Sven}, 
   url={https://fahrplan.events.ccc.de/congress/2010/Fahrplan/attachments/1780_27c3_console_hacking_2010.pdf},
   year={2010}
 } 
@@ -111,7 +103,7 @@ url = "https://cryptobook.nakov.com/",
   doi={10.1109/TIT.1985.1057074}}
   
 @misc{ICPBrasi30,
-author = {{Instituto Nacional de Tecnologia da Informação}},
+author = {{INSTITUTO NACIONAL DE TECNOLOGIA DA INFORMAÇÃO}},
 title = {ICP-Brasil},
 url = {https://www.gov.br/iti/pt-br/acesso-a-informacao/perguntas-frequentes/icp-brasil},
 month = {7},
@@ -119,7 +111,28 @@ year = {2020},
 urlaccessdate = {21/04/2021}
 }
 
-%--------
+@inproceedings{cryptRivest,
+author = {Rivest, Ronald L.},
+title = {Cryptography},
+year = {1991},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA},
+booktitle = {Handbook of Theoretical Computer Science (Vol. A): Algorithms and Complexity},
+pages = {617–755},
+numpages = {139}
+}
+
+@misc{hierarquiaICP,
+author = {{BENEFÍCIOS E APLICAÇÕES DA CERTIFICAÇÃO DIGITAL}},
+title = {Hierarquia da ICP-Brasil},
+howpublished = {\url{http://www.beneficioscd.com.br/cartilha_online/?pagina=oq06}},
+month = {},
+year = {c2013},
+urlaccessdate = {21/04/2021}
+}
+
+%---------------------------------------------
+%---------------------------------------------
 
 @manual{inmetro2003,
 	Author = {INMETRO},
