--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,10 +1,11 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
+   
+    Considering the importance of digital media and the large number of activities that people do through the internet, such as paying bills, making purchases and online transactions and accessing websites, none of this would be possible without the use of digital signatures. With them, it is possible to guarantee the authorship of a message and that this message has not been altered during the moment it is sent by the sender until it is received by the recipient. For instance, in an online transaction, one can ensure that neither the transaction amount nor the recipient has been changed. And for digital signatures to be possible several algorithms were created and the most recent is EdDSA, which uses elliptical curves. As it is a new algorithm, it has not been implemented in some programming languages yet, making its use impossible for people who want to use it in their projects. In this work, is propose the implementation in the Dart programming language of the Ed448 and Ed521 algorithms, which were used, respectively, in the V6 and V7 chains of ICP-Brasil.
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: latex. abntex. text editoration.
+   \textbf{Key-words}: digital signature. elliptical curve. cryptography. ICP-Brasil. EdDSA. Ed488. Ed521. Dart.
  \end{otherlanguage*}
 \end{resumo}
