--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -5,8 +5,13 @@
 % Dados do trabalho
 \titulo{Implementação de módulo para geração e verificação de assinaturas digitais EdDSA}
 \data{2021}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\palavraChaveUm{Assinatura digital}
+\palavraChaveDois{Curva elíptica}
+\palavraChaveTres{Criptografia}
+\palavraChaveQuatro{ICP-Brasil}
+\palavraChaveCinco{EdDSA}
+\palavraChaveSeis{Dart}
+
 
 % Dados da orientacao
 \orientador{Prof. Dr. Tiago Alves da Fonseca}
@@ -16,6 +21,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013 -- Data da aprovação do trabalho}
+\dataDaAprovacao{11 de maio de 2021}
 \membroConvidadoUm{Dr. José Antônio Carrijo Barbosa}
 \membroConvidadoDois{Prof. Dr. Edson Alves da Costa Junior}
