--- a/editaveis/resumo.tex
+++ b/editaveis/resumo.tex
@@ -1,17 +1,9 @@
 \begin{resumo}
- O resumo deve ressaltar o objetivo, o método, os resultados e as conclusões 
- do documento. A ordem e a extensão
- destes itens dependem do tipo de resumo (informativo ou indicativo) e do
- tratamento que cada item recebe no documento original. O resumo deve ser
- precedido da referência do documento, com exceção do resumo inserido no
- próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
- resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto. O texto pode conter no mínimo 150 e 
- no máximo 500 palavras, é aconselhável que sejam utilizadas 200 palavras. 
- E não se separa o texto do resumo em parágrafos.
+
+Considerando a importância dos meios digitais e o grande número de atividades que as pessoas fazem por meio da internet, como pagar contas, realizar compras e transações online e acessar sites, nada disso seria possível sem a utilização de assinaturas digitais. Com elas pode-se garantir a autoria de uma mensagem e que essa mensagem não foi alterada durante o momento em que é enviada pelo remetente até o seu recebimento pelo destinatário. Por exemplo, em uma transação online, pode-se garantir que nem o valor da transação nem o destinatário foram alterados. E para que as assinaturas digitais sejam possíveis, vários algorítimos foram criados e um dos mais recente, proposto inicialmente em 2011 e aprimorado posteriormente em 2015, é o EdDSA, que utiliza curvas torcidas de Edwards. Por ser um algoritmo novo, ele ainda não foi implementado em algumas linguagens de programação, tornando seu uso impossibilitado por pessoas que desejam utilizá-lo em seus projetos. Uma dessas linguagens de programação que não possuem muitas implementações do EdDSA é a Dart, uma linguagem cuja demanda tem crescido devido a possibilidade de criação de aplicações para web, mobile e desktop. Neste trabalho, propõe-se a implementação de módulos na linguagem de programação Dart dos algoritmos Ed448 e Ed521, os quais foram, respectivamente, utilizados nas Cadeias V6 e V7 da ICP-Brasil. Os módulos serão implementados de forma detalhada para que futuros pesquisadores que queiram realizar trabalhos parecidos possam utilizá-los como um guia e assim facilitar a implementação do algoritmo em outras linguagens de programação. Ao final, com o módulo já implementado em Dart, serão realizadas validações cruzadas com o algoritmo já implementado em Python a fim de certificar que os módulos foram implementados corretamente.
 
  \vspace{\onelineskip}
     
  \noindent
- \textbf{Palavras-chave}: latex. abntex. editoração de texto.
+ \textbf{Palavras-chave}: assinatura digital. curva elíptica. criptografia. ICP-Brasil. EdDSA. Dart
 \end{resumo}
