--- a/fixos/pacotes.tex
+++ b/fixos/pacotes.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,openright,twoside,a4paper,english,french,spanish,brazil]{abntex2}
 
+
 \usepackage{cmap}	
 \usepackage{lmodern}	
 \usepackage[T1]{fontenc}	
@@ -10,7 +11,7 @@
 \usepackage{graphicx}	
 \usepackage{units}
 \usepackage[brazilian,hyperpageref]{backref}
-\usepackage[alf]{abntex2cite}
+\usepackage[alf,abnt-etal-text=it,abnt-emphasize=bf]{abntex2cite}
 \usepackage{bold-extra}
 \usepackage{eso-pic}
 \usepackage{amssymb}
