--- a/fixos/fichaCatalografica.tex
+++ b/fixos/fichaCatalografica.tex
@@ -20,6 +20,10 @@
 	\hspace{0.5cm}
 		1. \imprimirpalavrachaveum.
 		2. \imprimirpalavrachavedois.
+		3. \imprimirpalavrachavetres.
+		4. \imprimirpalavrachavequatro.
+		5. \imprimirpalavrachavecinco.
+		6. \imprimirpalavrachaveseis.
 		I. \imprimirorientador.
 		II. Universidade de Brasília.
 		III. Faculdade UnB Gama.
