--- a/tcc.tex
+++ b/tcc.tex
@@ -16,10 +16,10 @@
 % \input{editaveis/errata}
 \input{fixos/folhaDeAprovacao}
 % \input{editaveis/dedicatoria}
-\input{editaveis/agradecimentos}
-% \input{editaveis/epigrafe}
-% \input{editaveis/resumo}
-% \input{editaveis/abstract}
+% \input{editaveis/agradecimentos}
+\input{editaveis/epigrafe}
+\input{editaveis/resumo}
+\input{editaveis/abstract}
 \input{fixos/listasAutomaticas}
 \input{editaveis/abreviaturas}
 % \input{editaveis/simbolos}
@@ -27,12 +27,13 @@
 
 \textual
 
-\input{editaveis/introducao}
-\input{editaveis/FT Sistemas Crip Chave Pública}
-\input{editaveis/FT ICP-Brasil}
-\input{editaveis/FT Dart}
-\input{editaveis/metodologia}
-\input{editaveis/considerações finais}
+\input{editaveis/Elementos do Texto/introducao}
+\input{editaveis/Elementos do Texto/FT Sistemas Crip Chave Pública}
+\input{editaveis/Elementos do Texto/FT ICP-Brasil}
+\input{editaveis/Elementos do Texto/FT Dart}
+\input{editaveis/Elementos do Texto/proposta de trabalho}
+\input{editaveis/Elementos do Texto/metodologia}
+\input{editaveis/Elementos do Texto/considerações preliminares}
 % \input{editaveis/aspectosgerais}
 % \input{editaveis/consideracoes}
 % \input{editaveis/textoepostexto}
